--- a/PigHouse/Base.lproj/Main.storyboard
+++ b/PigHouse/Base.lproj/Main.storyboard
@@ -249,13 +249,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p8P-SN-Zxv">
-                                <rect key="frame" x="-4" y="64" width="383" height="200"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="200"/>
                                 <subviews>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LLI-Ue-DEA">
-                                        <rect key="frame" x="0.0" y="0.0" width="383" height="200"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
                                     </scrollView>
                                     <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="3HQ-V7-2bf">
-                                        <rect key="frame" x="0.0" y="170" width="383" height="30"/>
+                                        <rect key="frame" x="0.0" y="170" width="375" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="pKL-Co-PWs"/>
                                         </constraints>
@@ -329,7 +329,7 @@
                             <constraint firstAttribute="leadingMargin" secondItem="kBQ-rD-Y5P" secondAttribute="leading" id="d0X-Te-RVb"/>
                             <constraint firstItem="Vwy-BU-yek" firstAttribute="top" secondItem="p8P-SN-Zxv" secondAttribute="bottom" constant="8" id="dGY-q3-FBH"/>
                             <constraint firstItem="wBj-AE-UAa" firstAttribute="top" secondItem="Vwy-BU-yek" secondAttribute="bottom" constant="14" id="eL3-ob-m7a"/>
-                            <constraint firstItem="p8P-SN-Zxv" firstAttribute="leading" secondItem="Iap-hP-xqK" secondAttribute="leadingMargin" constant="-20" id="fh9-XX-7tK"/>
+                            <constraint firstItem="p8P-SN-Zxv" firstAttribute="leading" secondItem="Iap-hP-xqK" secondAttribute="leadingMargin" constant="-16" id="fh9-XX-7tK"/>
                             <constraint firstItem="p8P-SN-Zxv" firstAttribute="top" secondItem="EVU-e8-Kac" secondAttribute="bottom" id="izB-0E-wX8"/>
                             <constraint firstAttribute="leadingMargin" secondItem="ae6-b3-yze" secondAttribute="leading" id="jBw-td-ZOE"/>
                             <constraint firstAttribute="trailingMargin" secondItem="QCf-W7-ezp" secondAttribute="trailing" id="kWg-mn-MLI"/>
@@ -339,7 +339,7 @@
                             <constraint firstAttribute="trailingMargin" secondItem="Vwy-BU-yek" secondAttribute="trailing" id="seZ-BL-tZd"/>
                             <constraint firstItem="qcN-UH-Mip" firstAttribute="leading" secondItem="Iap-hP-xqK" secondAttribute="leadingMargin" constant="-20" id="tdK-7g-X0f"/>
                             <constraint firstItem="fcd-jH-Fml" firstAttribute="top" secondItem="wBj-AE-UAa" secondAttribute="bottom" constant="15" id="wCS-Db-CXA"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="p8P-SN-Zxv" secondAttribute="trailing" constant="-20" id="zUg-7U-6QQ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="p8P-SN-Zxv" secondAttribute="trailing" constant="-16" id="zUg-7U-6QQ"/>
                             <constraint firstItem="7lU-Ja-b8E" firstAttribute="top" secondItem="2Xv-X1-ts4" secondAttribute="bottom" constant="15" id="zwO-Kk-Vk4"/>
                         </constraints>
                     </view>
@@ -552,6 +552,88 @@
             </objects>
             <point key="canvasLocation" x="3517.5999999999999" y="196.55172413793105"/>
         </scene>
+        <!--Card Auth Controller-->
+        <scene sceneID="iJP-xC-BM2">
+            <objects>
+                <viewController storyboardIdentifier="IDCardAuthController" id="eKO-z6-4v2" customClass="IDCardAuthController" customModule="PigHouse" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bSL-1N-LEG"/>
+                        <viewControllerLayoutGuide type="bottom" id="sAn-55-Fie"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="EsL-Ui-czw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="姓名" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EKj-P9-laL">
+                                <rect key="frame" x="36" y="376" width="303" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="hlb-nt-Une"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="身份证号" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Y9s-zT-kyo">
+                                <rect key="frame" x="36" y="429" width="303" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="LJi-uR-KPL"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mwz-qy-Qgz">
+                                <rect key="frame" x="16" y="602" width="343" height="45"/>
+                                <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="PcT-6k-d4l"/>
+                                </constraints>
+                                <state key="normal" title="提交申核"/>
+                                <connections>
+                                    <action selector="doLoginAction:" destination="pwb-xY-R5F" eventType="touchUpInside" id="IVO-vR-bA0"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="id_card_front" translatesAutoresizingMaskIntoConstraints="NO" id="qHI-da-cxF">
+                                <rect key="frame" x="36" y="40" width="303" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="160" id="TRj-ja-KUd"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="id_card_back" translatesAutoresizingMaskIntoConstraints="NO" id="Rh3-s4-44N">
+                                <rect key="frame" x="36" y="208" width="303" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="160" id="hIp-LM-QF4"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Rh3-s4-44N" firstAttribute="top" secondItem="qHI-da-cxF" secondAttribute="bottom" constant="8" id="77A-xz-yiC"/>
+                            <constraint firstItem="EKj-P9-laL" firstAttribute="leading" secondItem="EsL-Ui-czw" secondAttribute="leadingMargin" constant="20" id="CFa-PI-O3D"/>
+                            <constraint firstItem="qHI-da-cxF" firstAttribute="leading" secondItem="EsL-Ui-czw" secondAttribute="leadingMargin" constant="20" id="Gml-PY-gdh"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Y9s-zT-kyo" secondAttribute="trailing" constant="20" id="OJQ-8A-vg2"/>
+                            <constraint firstItem="Y9s-zT-kyo" firstAttribute="top" secondItem="EKj-P9-laL" secondAttribute="bottom" constant="8" id="Qw2-rT-tIk"/>
+                            <constraint firstItem="EKj-P9-laL" firstAttribute="top" secondItem="Rh3-s4-44N" secondAttribute="bottom" constant="8" id="aWn-or-Day"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="EKj-P9-laL" secondAttribute="trailing" constant="20" id="hIa-6M-n9o"/>
+                            <constraint firstItem="qHI-da-cxF" firstAttribute="top" secondItem="bSL-1N-LEG" secondAttribute="bottom" constant="20" id="m0f-fi-uYs"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Rh3-s4-44N" secondAttribute="trailing" constant="20" id="nLd-r3-3cq"/>
+                            <constraint firstItem="Rh3-s4-44N" firstAttribute="leading" secondItem="EsL-Ui-czw" secondAttribute="leadingMargin" constant="20" id="nUY-nx-1XU"/>
+                            <constraint firstItem="sAn-55-Fie" firstAttribute="top" secondItem="Mwz-qy-Qgz" secondAttribute="bottom" constant="20" id="uOE-Mi-Zav"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Mwz-qy-Qgz" secondAttribute="trailing" id="vOg-N6-eDt"/>
+                            <constraint firstItem="Y9s-zT-kyo" firstAttribute="leading" secondItem="EsL-Ui-czw" secondAttribute="leadingMargin" constant="20" id="xxn-tq-Q4s"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="qHI-da-cxF" secondAttribute="trailing" constant="20" id="ylF-jl-8uH"/>
+                            <constraint firstItem="Mwz-qy-Qgz" firstAttribute="leading" secondItem="EsL-Ui-czw" secondAttribute="leadingMargin" id="ymM-HG-mHu"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="backImageView" destination="Rh3-s4-44N" id="8aU-fv-5Xa"/>
+                        <outlet property="frontImageView" destination="qHI-da-cxF" id="0je-e1-b5o"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yOG-fe-vw0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4180" y="198"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="0sX-Oe-Ent">
             <objects>
@@ -570,6 +652,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="id_card_back" width="341" height="222"/>
+        <image name="id_card_front" width="382" height="247"/>
         <image name="id_card_sample" width="295" height="185"/>
         <image name="no_auth" width="63" height="63"/>
     </resources>
